--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,1 @@
-myenv
-.pytest_cache
-src/__pycache__
-__pycache__
-dist
-build
-*.egg-info
-token.json
-.env
-myenv
-config.json
-.config.json
-prayer-player-deb/
-credential.json 
-src/config/security/google_client_config.json
+errors.txt
