--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -37,6 +37,11 @@ jobs:
     - name: Create Google Client Config from secret
       run: echo "${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}" > src/config/security/google_client_config.json
 
+    - name: Create runtime temporary directory
+      run: |
+        mkdir -p /tmp/pyinstaller
+        chmod 777 /tmp/pyinstaller
+
     - name: Build application executable
       run: pyinstaller --noconfirm PrayerPlayer.spec
 
