Fix: Use onefile build for macOS

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -43,7 +43,7 @@ jobs:
         chmod 777 /tmp/pyinstaller
 
     - name: Build application executable
-      run: pyinstaller --noconfirm PrayerPlayer.spec
+      run: pyinstaller --noconfirm --onefile PrayerPlayer.spec
 
     - name: Set up token for dry run
       run: |
