--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -12,54 +12,35 @@ on:
 
 jobs:
   build:
-    # This job runs on macOS to build for macOS.
-    runs-on: macos-latest
+    uses: ./.github/workflows/build-common.yml
+    with:
+      os: macos-latest
+      python_version: '3.10'
+    secrets:
+      GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}
+      TOKEN: ${{ secrets.TOKEN }}
 
+  test:
+    needs: build
+    uses: ./.github/workflows/test-dry-run.yml
+    with:
+      os: macos-latest
+    secrets:
+      TOKEN: ${{ secrets.TOKEN }}
+
+  package-dmg:
+    runs-on: macos-latest
+    needs: test
     steps:
-    # Step 1: Check out the repository code.
     - name: Check out code
       uses: actions/checkout@v3
 
-    # Step 2: Set up the specified Python version.
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Download application executable artifact
+      uses: actions/download-artifact@v4
       with:
-        python-version: '3.10'
+        name: prayer-player-macos-executable
+        path: dist
 
-    # Step 3: Install all required Python dependencies from requirements files.
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-
-    # Step 4: Build the application executable using PyInstaller.
-    - name: Create Google Client Config from secret
-      run: echo "${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}" > src/config/security/google_client_config.json
-
-    - name: Create runtime temporary directory
-      run: |
-        mkdir -p /tmp/pyinstaller
-        chmod 777 /tmp/pyinstaller
-
-    - name: Build application executable
-      run: pyinstaller --noconfirm PrayerPlayer.spec
-
-    - name: Set up token for dry run
-      run: |
-        mkdir -p ~/Library/Application\ Support/PrayerPlayer
-        echo "${{ secrets.TOKEN }}" > ~/Library/Application\ Support/PrayerPlayer/token.json
-
-    # Step 5: Test application startup (dry run)
-    - name: Test application startup (dry run)
-      shell: bash
-      run: |
-        echo "Listing contents of dist directory:"
-        ls -R dist
-        echo "Running startup test for macOS"
-        ./dist/PrayerPlayer --dry-run --country US --city "New York"
-
-    # Step 6: Build and package macOS .dmg file
     - name: Build and package macOS .dmg file
       shell: bash
       run: |
@@ -67,6 +48,7 @@ jobs:
         brew install create-dmg
 
         # Create the final .dmg installer.
+        mv dist/PrayerPlayer.app dist/
         create-dmg \
           --volname "PrayerPlayer Installer" \
           --window-pos 200 120 \
@@ -78,7 +60,6 @@ jobs:
           "dist/PrayerPlayer.dmg" \
           "dist/PrayerPlayer.app"
 
-    # Step 7: Upload macOS Artifact
     - name: Upload macOS Artifact
       uses: actions/upload-artifact@v4
       with:
