--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -12,57 +12,41 @@ on:
 
 jobs:
   build:
-    # This job runs on Windows to build for Windows.
-    runs-on: windows-latest
+    uses: ./.github/workflows/build-common.yml
+    with:
+      os: windows-latest
+      python_version: '3.10'
+    secrets:
+      GOOGLE_CLIENT_CONFIG_JSON: ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}
+      TOKEN: ${{ secrets.TOKEN }}
 
+  test:
+    needs: build
+    uses: ./.github/workflows/test-dry-run.yml
+    with:
+      os: windows-latest
+    secrets:
+      TOKEN: ${{ secrets.TOKEN }}
+
+  package-exe:
+    runs-on: windows-latest
+    needs: test
     steps:
-    # Step 1: Check out the repository code.
     - name: Check out code
       uses: actions/checkout@v3
 
-    # Step 2: Set up the specified Python version.
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Download application executable artifact
+      uses: actions/download-artifact@v4
       with:
-        python-version: '3.10'
+        name: prayer-player-windows-executable
+        path: dist
 
-    # Step 3: Install all required Python dependencies from requirements files.
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
-
-    # Step 4: Build the application executable using PyInstaller.
-    - name: Create Google Client Config from secret
-      run: echo "${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}" > src/config/security/google_client_config.json
-
-    - name: Build application executable
-      run: pyinstaller --noconfirm  PrayerPlayer.spec
-
-    - name: Set up token for dry run
-      run: |
-        mkdir -p "$env:APPDATA\PrayerPlayer"
-        echo "${{ secrets.TOKEN }}" | Out-File -FilePath "$env:APPDATA\PrayerPlayer\token.json" -Encoding utf8
-
-    # Step 5: Test application startup (dry run)
-    - name: Test application startup (dry run)
-      shell: bash
-      run: |
-        echo "Listing contents of dist directory:"
-        ls -R dist
-        echo "Running startup test for Windows"
-        ./dist/PrayerPlayer.exe --dry-run --country US --city "New York"
-
-    # Step 6: Install Inno Setup for Windows installer
     - name: Install Inno Setup for Windows installer
       run: choco install innosetup --no-progress
 
-    # Step 7: Compile Windows installer
     - name: Compile Windows installer
       run: iscc "deployment\windows\setup.iss"
 
-    # Step 8: Upload Windows Artifact
     - name: Upload Windows Artifact
       uses: actions/upload-artifact@v4
       with:
