fix(ci): correct artifact names and pyinstaller temp dir
- Corrected the artifact names in the download steps of the build workflows.
- Configured PyInstaller to use a specific temporary directory on macOS to prevent runtime errors.
- Added a step to list the dist directory for debugging.

--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -63,6 +63,9 @@ jobs:
       run: |
         pyinstaller --noconfirm PrayerPlayer.spec
 
+    - name: List dist directory
+      run: ls -R dist/
+
     - name: Upload application executable artifact
       uses: actions/upload-artifact@v4
       with:
