--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ prayer-player-deb
 credential.json  
 src/config/security/google_client_config.json
 __pycache__
+Installers/prayer-player-ubuntu.zip
+Installers/prayer-player-windows.zip
