--- a/.github/workflows/test-dry-run.yml
+++ b/.github/workflows/test-dry-run.yml
@@ -54,21 +54,11 @@ jobs:
         echo "Listing contents of dist directory:"
         ls -R dist
         echo "Running startup test for ${{ inputs.os }}"
-        
-        # Create a temporary directory and set TMPDIR for the application
-        APP_TMPDIR=$(mktemp -d)
-        
-        cd dist
-        
-        # Adjust the executable path and run with the correct TMPDIR
+        # Adjust the executable path based on the OS
         if [ "${{ inputs.os }}" == "ubuntu-22.04" ]; then
-          TMPDIR=$APP_TMPDIR ./PrayerPlayer --dry-run --country US --city "New York"
+          ./dist/PrayerPlayer/PrayerPlayer --dry-run --country US --city "New York"
         elif [ "${{ inputs.os }}" == "macos-latest" ]; then
-          if [ -d "./PrayerPlayer.app" ]; then
-            TMPDIR=$APP_TMPDIR ./PrayerPlayer.app/Contents/MacOS/PrayerPlayer --dry-run --country US --city "New York"
-          else
-            TMPDIR=$APP_TMPDIR ./PrayerPlayer --dry-run --country US --city "New York"
-          fi
+          ./dist/PrayerPlayer.app/Contents/MacOS/PrayerPlayer --dry-run --country US --city "New York"
         elif [ "${{ inputs.os }}" == "windows-latest" ]; then
-          ./PrayerPlayer.exe --dry-run --country US --city "New York"
+          ./dist/PrayerPlayer/PrayerPlayer.exe --dry-run --country US --city "New York"
         fi
