fix(ci): implement definitive fix for macOS build
This commit resolves the persistent macOS build failures by implementing a robust, platform-specific build strategy.

- Created a dedicated 'PrayerPlayer-mac.spec' to explicitly define the macOS .app bundle build, removing all conditional logic that was failing on the runner.
- Simplified the primary 'PrayerPlayer.spec' to handle only Linux and Windows single-file executable builds.
- Updated 'build-common.yml' to intelligently select the correct .spec file based on the operating system.
- Aligned 'test-dry-run.yml' to expect the correct, distinct build artifact from each platform.

This approach eliminates ambiguity and ensures a reliable build process across all operating systems.

--- a/.github/workflows/build-common.yml
+++ b/.github/workflows/build-common.yml
@@ -55,7 +55,11 @@ jobs:
 
     - name: Build application executable
       run: |
-        pyinstaller --noconfirm PrayerPlayer.spec
+        if [ "${{ inputs.os }}" == "macos-latest" ]; then
+          pyinstaller --noconfirm PrayerPlayer-mac.spec
+        else
+          pyinstaller --noconfirm PrayerPlayer.spec
+        fi
 
     - name: List dist directory
       run: ls -R dist/
