--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,62 @@
 name: Build and Release Prayer Player
 
-on:  push:    branches:    - main  pull_request:    branches:    - main
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
 
-jobs:  build-and-package:    strategy:      fail-fast: false      matrix:        include:          - os: ubuntu-22.04            python-version: '3.10'            asset_name: prayer-player-ubuntu            asset_path: dist/*.deb          - os: macos-latest            python-version: '3.10'            asset_name: prayer-player-macos            asset_path: dist/*.dmg          - os: windows-latest            python-version: '3.10'            asset_name: prayer-player-windows            asset_path: deployment/windows/Output/*.exe
+jobs:
+  build-and-package:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-22.04
+            python-version: '3.10'
+            asset_name: prayer-player-ubuntu
+            asset_path: dist/*.deb
+          - os: macos-latest
+            python-version: '3.10'
+            asset_name: prayer-player-macos
+            asset_path: dist/*.dmg
+          - os: windows-latest
+            python-version: '3.10'
+            asset_name: prayer-player-windows
+            asset_path: deployment/windows/Output/*.exe
 
     runs-on: ${{ matrix.os }}
-    
-    steps:    - name: Check out code      uses: actions/checkout@v3
 
-    - name: Set up Python      uses: actions/setup-python@v4      with:        python-version: ${{ matrix.python-version }}
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
 
-    - name: Install Linux GUI dependencies      if: runner.os == 'Linux'      run: |        sudo apt-get update        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
 
-    - name: Cache Python dependencies      uses: actions/cache@v3      with:        path: ~/.cache/pip        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}        restore-keys: |
+    - name: Install Linux GUI dependencies
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev
+
+    - name: Cache Python dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt', 'requirements-dev.txt') }}
+        restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Install dependencies      run: |        python -m pip install --upgrade pip setuptools wheel        pip install -r requirements.txt        pip install -r requirements-dev.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
     - name: Create Google Client Config from secret (macOS/Linux)
       if: runner.os != 'Windows'
@@ -86,7 +127,7 @@ jobs:  build-and-package:    strategy:      fail-fast: false      matrix:       
           cat <<EOF > "${DEB_DIR}/DEBIAN/control"
           Package: prayer-player
           Version: ${VERSION}
-          Architecture: amd664
+          Architecture: amd64
           Maintainer: Omar <dev@omar.com>
           Description: Prayer times application that plays the Adhan.
           EOF
