--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev gir1.2-gtk-3.0
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev gir1.2-gtk-3.0 libgirepository1.0-dev
 
     - name: Get pip cache dir
       id: pip-cache
