--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,17 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Install dependencies
+    - name: Install dependencies (Windows/macOS)
+      if: runner.os != 'Linux'
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+
+    - name: Install dependencies (Linux)
+      if: runner.os == 'Linux'
+      env:
+        PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:${{ env.PKG_CONFIG_PATH }}
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
