--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libglib2.0-dev pkg-config libcairo2-dev libgirepository1.0-dev gobject-introspection libegl1 libpulse0 libxcb-cursor0 libasound2-dev gir1.2-gtk-3.0 gir1.2-glib-2.0
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev
 
     - name: Get pip cache dir
       id: pip-cache
@@ -66,8 +66,6 @@ jobs:
 
     - name: Install dependencies (Linux)
       if: runner.os == 'Linux'
-      env:
-        PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:${{ env.PKG_CONFIG_PATH }}
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install -r requirements.txt
