feat: Replace playsound with aplay for Linux audio playback
This commit replaces the  library with  for audio playback on Linux systems. This change aims to improve reliability and address potential issues with 's backend on Linux.

Key changes include:
- Modified  to conditionally use  for Linux and  for other operating systems.
- Removed  from .
- Added  (which provides ) to the Linux GUI dependencies in .

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils
 
     - name: Get pip cache dir
       id: pip-cache
