fix(windows): Correctly write Google Client Config JSON
This commit fixes the  encountered on Windows builds by ensuring the  file is written correctly. The  PowerShell command was replaced with  to provide a more robust and reliable way to write the JSON secret, preventing malformed or empty files.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,9 @@ jobs:
     - name: Create Google Client Config from secret (Windows)
       if: runner.os == 'Windows'
       shell: pwsh
-      run: Set-Content -Path "src/config/security/google_client_config.json" -Value '${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}'
+      run: |
+        $jsonContent = '${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}'
+        [System.IO.File]::WriteAllText("src/config/security/google_client_config.json", $jsonContent, [System.Text.Encoding]::UTF8)
 
     - name: Build application executable
       shell: bash
