--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Create Google Client Config from secret (macOS/Linux)
       if: runner.os != 'Windows'
       run: |
-        echo "DEBUG: GOOGLE_CLIENT_CONFIG_JSON secret length: ${{ secrets.GOOGLE_CLIENT_CONFIG_JSON | length }}"
+        echo "DEBUG: GOOGLE_CLIENT_CONFIG_JSON secret length: $(echo -n "${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}" | wc -c)"
         echo "${{ secrets.GOOGLE_CLIENT_CONFIG_JSON }}" | base64 -d > src/config/security/google_client_config.json
 
     - name: Create Google Client Config from secret (Windows)
