--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils
+        sudo apt-get install -y libegl1 libpulse0 libxcb-cursor0 libasound2-dev alsa-utils libqt6gui6 libqt6widgets6
 
     - name: Get pip cache dir
       id: pip-cache
@@ -154,7 +154,7 @@ jobs:
           Architecture: amd64
           Maintainer: Omar <dev@omar.com>
           Description: Prayer times application that plays the Adhan.
-          Depends: libegl1, libpulse0, libxcb-cursor0, libasound2, libxcb-cursor0
+          Depends: libc6, libqt6gui6, libqt6widgets6, libxcb-xinerama0
           EOF
 
           # Create post-installation script
@@ -162,7 +162,7 @@ jobs:
           #!/bin/sh
           set -e
           echo "Updating icon cache..."
-          gtk-update-icon-cache -q /usr/share/icons/hicolor || true
+          gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor || true
           echo "Updating desktop database..."
           update-desktop-database -q || true
           exit 0
@@ -174,7 +174,7 @@ jobs:
           set -e
           if [ "$1" = "remove" ] || [ "$1" = "purge" ]; then
               echo "Updating icon cache after removal..."
-              gtk-update-icon-cache -q /usr/share/icons/hicolor || true
+              gtk-update-icon-cache -q -t -f /usr/share/icons/hicolor || true
               echo "Updating desktop database after removal..."
               update-desktop-database -q || true
           fi
@@ -189,15 +189,14 @@ jobs:
           cat <<EOF > "${DEB_DIR}/usr/share/applications/prayer-player.desktop"
           [Desktop Entry]
           Name=Prayer Player
-          Exec=/opt/PrayerPlayer/PrayerPlayer
+          Exec=/usr/local/bin/PrayerPlayer
           Icon=prayer-player
           Type=Application
           Categories=Utility;
           EOF
 
           # Copy application files
-          cp -r dist/PrayerPlayer/* "${DEB_DIR}/opt/PrayerPlayer/"
-          ln -s /opt/PrayerPlayer/PrayerPlayer/PrayerPlayer "${DEB_DIR}/usr/local/bin/prayer-player"
+          cp dist/PrayerPlayer "${DEB_DIR}/usr/local/bin/"
           cp src/assets/mosque.png "${DEB_DIR}/usr/share/icons/hicolor/256x256/apps/prayer-player.png"
 
           # Build the package
